<resources>
    <string name="app_name">Оценка конференций</string>
    <string name="event">Событие</string>
    <string name="events">События</string>
    <string name="members">Участники</string>
    <string name="member">Участник</string>
    <string name="add_event">Создать событие</string>
    <string name="name_event">Название конференции</string>
    <string name="status">Статус</string>
    <string name="description">Описание</string>
    <string name="name_p">Название площадки</string>
    <string name="manager">Отвецтвенное лицо</string>
    <string name="pl">Площадка</string>
    <string name="plus">+</string>
    <string name="time_start">Время начала:</string>
    <string name="date_start">Дата начала:</string>
    <string name="icon">icon</string>
    <string name="add_member">add_member</string>
    <string name="statistics">Статистика</string>
    <string name="save_event">Событие сохранено!</string>
    <string name="save_member">Участник сохранен!</string>
    <string name="started">Идет</string>
    <string name="search">Поиск</string>
    <string name="planned">Запланированно</string>
    <string name="replaced">Перенесено</string>
    <string name="canceled">Отменено</string>
    <string name="finished">Завершено</string>

    <string name="categories">Категории</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="card_member">Карточка учатника</string>

    <string name="name_member">Название участника</string>
    <string name="utc_plus_3">Москва Московское время (MSK)</string>
    <string name="def_utc">+3</string>
    <string name="utc">Временная зона</string>
    <string name="assistant">Техническое обеспечение</string>
    <string name="fio">Ф.И.О.</string>
    <string name="email">email</string>
    <string name="skype">skype</string>
    <string name="phone">Номер телефона</string>
    <string name="planed_conference">Начало конференции</string>
    <string name="add">Добавить</string>
    <string name="etc">Прочее</string>
    <string name="platform">Площадка</string>
    <string name="optionally">Дополнительная информация</string>
    <string name="link">Ссылка</string>
    <string name="about_us">Контактные данные ответственного за техническое обеспечение мероприятия</string>
    <string name="registered">Зарегистрировано</string>
    <string name="greatest_activity">Наибольшая активность</string>
    <string name="back_event">Последнее</string>

    <string-array name="events">
        <item>Идет</item>
        <item>Запланированно</item>
        <item>Перенесено</item>
        <item>Отменено</item>
        <item>Завершено</item>
    </string-array>

    <string-array name="platforms">
        <item>Mind</item>
        <item>Skype</item>
        <item>Zoom</item>
        <item>Jit.Si</item>
        <item>Hangouts</item>
        <item>Ya.Telemost</item>
    </string-array>
</resources>
