<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/events" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/started" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerStarted"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/planned" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView

                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/replaced" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView

                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/canceled" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView

                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/finished" />

            <View
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>